# run-pix-admin

./: .dockerignore  Dockerfile  Makefile  README.md  api_template.py  app.py  data.json  main.py  pyproject.toml  requirements.txt  requirements_flask.txt  run-pix-admin.ipynb
examples/: pinecone_kb.py  slide_template_copy.py
nb/: misc.py  requirements.txt  run-pix-admin.ipynb  slides_template.ipynb  townscriptSync.ipynb
old/: template.py
src/: app.py  app_flask.py  config.yaml  gslide_template.py  jinja_template.py  misc.py  townscript.py
src/cms/: __init__.py
src/coach/: __init__.py  agent_os.py  studio.py
src/coach/agents/: __init__.py  basic_agent.py
src/coach/lib/: __init__.py  db.py  firestore_vectordb.py  knowledge.py  model.py
src/gapi/: __init__.py  document.py  drive.py
src/pages/: ai.md  cms.md
src/static/: about.txt  index.html
src/templates/: base.html  cert.html  index.html  page.html  yfinance.html
src/yahoofinance/: __init__.py  ticker.py  yf_app.py
templates/: base.html  index.html  townscriptsync.html
tests/: README_FIRESTORE_SETUP.md  README_FIRESTORE_VECTORDB_TESTS.md  conftest.py  old_test_flask.py  test_cms.py  test_coach_agents.py  test_coach_db.py  test_coach_init.py  test_coach_studio.py  test_fastapi.py  test_gapi.py  test_indiathon_firestore_vectordb.py  test_jinja_template.py  test_misc.py  test_pinecone_vectordb.py  test_townscript.py
