[project]
name = "run-pix-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "debugpy>=1.8.18",
    "fastapi[standard]>=0.124.4",
    "firebase-admin>=7.1.0",
    "flask-cors==4.0.0",
    "flask[async]==2.3.3",
    "google-api-python-client>=2.187.0",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "pydash>=8.0.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests==2.31.0",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
