[project]
name = "run-pix-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.21",
    "authlib>=1.6.6",
    "ddgs>=9.10.0",
    "debugpy>=1.8.18",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "firebase-admin>=7.1.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.56.0",
    "gspread>=6.2.1",
    "itsdangerous>=2.2.0",
    "markdown>=3.10",
    "mcp>=1.25.0",
    "ollama>=0.6.2",
    "openai>=2.38.0",
    "pandas>=2.3.3",
    "pydash>=8.0.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests==2.31.0",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pytest-watcher>=0.6.3",
]
